human_written_tests/WebAssembly/processed_control_flow_validation/test_block_16.wast
(assert_invalid
  (module (func $type-empty-f64 (result f64) (block)))
  "type mismatch"
)